estilizando o conteudo central

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <main>
-  <app-nav></app-nav>
+  <header>
+    <app-nav></app-nav>
+    <section class="headerTitle">
+      <h1>Informações de seus filmes e séries favoritos</h1>
+    </section>
+  </header>
+  <app-content></app-content>
 </main>
 <router-outlet />
