--- a/src/components/nav/nav.component.scss
+++ b/src/components/nav/nav.component.scss
@@ -1,11 +1,12 @@
 nav{
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
     font-size: medium;
     display: flex;
     align-items: center;
     justify-content: space-around;
     .navTitle{
-        color: red;
+        color: rgb(255, 255, 255);
+        font-size: large;
     }
     .navLinks{
         ul{
