--- a/src/components/content/content.component.html
+++ b/src/components/content/content.component.html
@@ -3,7 +3,7 @@
         <h3>Filmes Recomendados</h3>
         <section class="movies">
             <section class="movie">
-                <img src="" alt="">
+                @for (content of contents; track content) {}
             </section>
         </section>
     </section>
