--- a/src/components/nav/nav.component.scss
+++ b/src/components/nav/nav.component.scss
@@ -17,6 +17,13 @@ nav{
                 a{
                     color: #fff;
                 }
+                a:hover{
+                    color: rgb(121, 121, 121);
+                    transition: all 250ms;
+                }
+                a:not(:hover){
+                    transition: all 250ms;
+                }
             }
         }
     }
