--- a/src/components/nav/nav.component.html
+++ b/src/components/nav/nav.component.html
@@ -4,9 +4,9 @@
     </section>
     <section class="navLinks">
         <ul>
-            <li><a href="">Início</a></li>
-            <li><a href="">Filmes</a></li>
-            <li><a href="">Séries</a></li>
+            <li><a href="#">Início</a></li>
+            <li><a href="#movies">Filmes</a></li>
+            <li><a href="#series">Séries</a></li>
             <li><a href="">Sobre o projeto</a></li>
         </ul>
     </section>
