--- a/src/components/nav/nav.component.html
+++ b/src/components/nav/nav.component.html
@@ -8,6 +8,7 @@
             <li><a href="#movies">Filmes</a></li>
             <li><a href="#series">Séries</a></li>
             <li><a href="">Sobre o projeto</a></li>
+            <app-search-input></app-search-input>
         </ul>
     </section>
 </nav>
