criando função de busca de conteúdo

--- a/src/components/content/content.component.html
+++ b/src/components/content/content.component.html
@@ -1,4 +1,8 @@
 <section class="content">
+    <section class="searchContainer">
+        <app-search-input></app-search-input>
+        <app-search-output></app-search-output>
+    </section>
     <section class="recommendedMovies">
         <h3>Filmes Recomendados</h3>
         <section class="movies" id="movies">
