--- a/src/components/search-input/search-input.component.html
+++ b/src/components/search-input/search-input.component.html
@@ -1,8 +1,9 @@
-<section>
-    <select name="type" [(ngModel)]="selectType">
+<section class="searchInput">
+    <select class="selectType" name="type" [(ngModel)]="selectType">
         <option value="Filmes">Filmes</option>
         <option value="Series">Séries</option>
     </select>
     <input type="text" placeholder="Nome do filme/série" [(ngModel)]="inputSearch"/>
     <button (click)="searchContent()">Pesquisar</button>
+    <app-search-output content="teste"></app-search-output>
 </section>
