--- a/src/components/search-input/search-input.component.scss
+++ b/src/components/search-input/search-input.component.scss
@@ -1,3 +1,31 @@
-h1{
-    color: white;
+.searchInput{
+    text-align: center;
+    margin-top: 2.5rem;
+    .selectType, input, button{
+        border: none;
+        background-color: #ffffff1c;
+        color: #fff;
+    }
+    .selectType{
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        padding: 0.75rem;
+        cursor: pointer;
+
+        option{
+            color: #000;
+        }
+    }
+    input{
+        padding: 0.80rem;
+    }
+    input:focus{       
+        outline: none;
+    }
+    button{
+        border-top-right-radius: 50px;
+        border-bottom-right-radius: 50px;
+        padding: 0.80rem;
+        cursor: pointer;
+    }
 }
