--- a/src/components/search-input/search-input.component.scss
+++ b/src/components/search-input/search-input.component.scss
@@ -1,6 +1,7 @@
+@import url(../content/content.component.scss);
 .searchInput{
     text-align: center;
-    margin-top: 2.5rem;
+    margin: 2.5rem 0 2.5rem 0;
     .selectType, input, button{
         border: none;
         background-color: #ffffff1c;
@@ -27,5 +28,12 @@
         border-bottom-right-radius: 50px;
         padding: 0.80rem;
         cursor: pointer;
+    }
+}
+.searchOutPut{
+    .results{
+        display: grid;
+        justify-content: space-between;
+        grid-template-columns: auto auto auto auto auto auto;
     }
 }
