criando página de conteúdo específico

--- a/src/components/content/content.component.html
+++ b/src/components/content/content.component.html
@@ -6,8 +6,8 @@
         <h3>Filmes Recomendados</h3>
         <section class="movies" id="movies">
             @for (movie of movies; track movie) {
-                <section class="movie">
-                    <a href="#"><img src={{movie.Poster}} alt="Poster" width="180px" height="270px"/></a>
+                <section class="movie" (click)="openContentPage(movie)">
+                    <img src={{movie.Poster}} alt="Poster" width="180px" height="270px"/>
                 </section>
             }
         </section>
