--- a/src/components/content/content.component.scss
+++ b/src/components/content/content.component.scss
@@ -11,6 +11,7 @@
         .movie, .serie{
             width: 180px;
             margin-bottom: 2rem;
+            cursor: pointer;
         }
     }
     
