consertando alguns bugs na visualização dos dados na segunda página de conteúdo

--- a/src/components/about-project/about-project.component.html
+++ b/src/components/about-project/about-project.component.html
@@ -1,1 +1,10 @@
-<p>about-project works!</p>
+<section class="aboutProject">
+    <h3>Sobre o projeto:</h3>
+    <p>
+        Esse projeto foi desenvolvido utilizando Angular 19, e integrado a <a href="https://www.omdbapi.com/">OMDb Api </a>
+        (API que fornece diversas informações sobre filmes e séries).
+    </p>
+    <p>
+        Teve como principal objetivo estudar a respeito do uso de APIs no Frontend; estudar conceitos do framework Angular; etc.
+    </p>
+</section>
