--- a/src/components/nav/nav.component.html
+++ b/src/components/nav/nav.component.html
@@ -5,8 +5,8 @@
     <section class="navLinks">
         <ul>
             <li><a href="#">Início</a></li>
-            <li><a href="#movies">Filmes</a></li>
-            <li><a href="#series">Séries</a></li>
+            <li><a href="#recommendedMovies">Filmes</a></li>
+            <li><a href="#recommendedSeries">Séries</a></li>
             <li><a href="">Sobre o projeto</a></li>
         </ul>
     </section>
