--- a/src/pages/content-page/content-page.component.html
+++ b/src/pages/content-page/content-page.component.html
@@ -1,9 +1,9 @@
 <section class="container">
-
     <app-nav></app-nav>
     <section class="contentPage">
         <!-- Como recebo apenas um único conteudo, não preciso utilizar For, apenas If -->
-        @if(contents){
+        @if(contents?.Title){
+        <!-- O '?' se chama 'encadeamento opcional', ele serve para verificar se uma coisa existe antes de tentar acessar -->
             <section class="contentImage">
                 <img [src]="contents.Poster" alt="Poster" width="300px" height="450px">
             </section>
@@ -16,20 +16,29 @@
                 <p><b class="special">Genre: </b>{{contents.Genre}}</p>
                 <p><b class="special">˗ˏˋ ★ ˎˊ˗ Ratings:</b></p>
                 <section class="ratings">
-                    <section class="rating">
-                        <p>{{contents.Ratings[0].Source}}</p>
-                        <p>{{contents.Ratings[0].Value}}</p>
-                    </section>
-                    <section class="rating">
-                        <p>{{contents.Ratings[1].Source}}</p>
-                        <p>{{contents.Ratings[1].Value}}</p>
-                    </section>
-                    <section class="rating">
-                        <p>{{contents.Ratings[2].Source}}</p>
-                        <p>{{contents.Ratings[2].Value}}</p>
-                    </section>
+                    @if (contents?.Ratings[0]) {
+                        <section class="rating">
+                            <p>{{contents.Ratings[0].Source}}</p>
+                            <p>{{contents.Ratings[0].Value}}</p>
+                        </section>
+                    }
+                    @if(contents?.Ratings[1]){   
+                        <section class="rating">
+                            <p>{{contents.Ratings[1].Source}}</p>
+                            <p>{{contents.Ratings[1].Value}}</p>
+                        </section>
+                    }
+                    @if(contents?.Ratings[2]){
+                        <section class="rating">
+                            <p>{{contents.Ratings[2].Source}}</p>
+                            <p>{{contents.Ratings[2].Value}}</p>
+                        </section>
+                    }
                 </section>
             </section>
+        }
+        @else {
+            <h1 style="position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);">Nenhum conteúdo</h1>
         }
 </section>
 </section>
