--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,10 @@
 *{
     font-family: "Inter", sans-serif;
 }
+html {
+}
 body{
+    scroll-behavior: smooth;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
