adicionando responsividade a tela principal

--- a/src/components/about-project/about-project.component.html
+++ b/src/components/about-project/about-project.component.html
@@ -1,4 +1,4 @@
-<section class="aboutProject">
+<section class="aboutProject" id="aboutProject">
     <h3>Sobre o projeto:</h3>
     <p>
         Esse projeto foi desenvolvido utilizando Angular 19, e integrado a <a href="https://www.omdbapi.com/">OMDb Api </a>
