--- a/src/components/nav/nav.component.scss
+++ b/src/components/nav/nav.component.scss
@@ -28,3 +28,18 @@ nav{
         }
     }
 }
+@media (max-width:550px) {
+    nav{
+        background-color: aqua;
+        .navTitle{
+            font-size: 15px;
+        }
+        .navLinks{
+            ul{
+                li{
+                    margin: 0 0.5rem 0 0.5rem;
+                }
+            }
+        }
+    }
+}
