--- a/src/components/nav/nav.component.html
+++ b/src/components/nav/nav.component.html
@@ -7,7 +7,7 @@
             <li><a href="#">Início</a></li>
             <li><a href="#recommendedMovies">Filmes</a></li>
             <li><a href="#recommendedSeries">Séries</a></li>
-            <li><a href="">Sobre o projeto</a></li>
+            <li><a href="#aboutProject">Sobre o projeto</a></li>
         </ul>
     </section>
 </nav>
