--- a/src/components/content/content.component.scss
+++ b/src/components/content/content.component.scss
@@ -5,8 +5,9 @@
     .recommendedMovies, .recommendedSeries{
         .movies, .series{
             display: grid;
-            justify-content: space-between;
-            grid-template-columns: auto auto auto auto auto auto;
+            justify-content: center;
+            gap: 1rem;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
         }
         .movie, .serie{
             width: 180px;
@@ -14,13 +15,12 @@
             cursor: pointer;
         }
     }
-}
-@media (max-width:1200px) {
-    .movies, .series{
-        background-color: aqua;
-        display: grid;
-        justify-content: space-between;
-        grid-template-columns: auto auto auto auto auto;
-        gap: 1px;
+    @media (max-width:1200px) {
+        .recommendedMovies, .recommendedSeries{
+            
+            .movies, .series{
+                background-color: aqua;
+            }
+        }
     }
 }
