--- a/src/components/search-input/search-input.component.html
+++ b/src/components/search-input/search-input.component.html
@@ -1,8 +1,8 @@
 <!-- Section que contém Input de pesquisa -->
 <section class="searchInput">
     <select class="selectType" name="type" [(ngModel)]="selectType">
-        <option value="Filmes">Filmes</option>
-        <option value="Series">Séries</option>
+        <option value="Filmes">Filme</option>
+        <option value="Series">Série</option>
     </select>
     <input type="text" placeholder="Nome do filme/série" [(ngModel)]="inputSearch"/>
     <button (click)="searchContent()">Pesquisar</button>
