--- a/src/components/search-input/search-input.component.scss
+++ b/src/components/search-input/search-input.component.scss
@@ -40,3 +40,32 @@
         }
     }
 }
+@media (max-width:420px) {
+    .searchInput{
+        input{
+            width: 100px;
+        }
+    }
+}
+@media (max-width:335px) {
+    .searchInput{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .selectType{
+            border-radius: 50px;
+            width: 150px;
+            margin-bottom: 0.5rem;
+        }
+        input{
+            width: 150px;
+            border-radius: 50px;
+            margin-bottom: 0.5rem;
+        }
+        button{
+            border-radius: 50px;
+            width: 150px;
+        }
+    }
+}
