--- a/src/components/about-project/about-project.component.html
+++ b/src/components/about-project/about-project.component.html
@@ -7,4 +7,6 @@
     <p>
         Teve como principal objetivo estudar a respeito do uso de APIs no Frontend; estudar conceitos do framework Angular; etc.
     </p>
+    <img src="https://img.shields.io/badge/Angular-DD0031?style=for-the-badge&logo=angular&logoColor=white"/>
+    <img src="https://img.shields.io/badge/TypeScript-007ACC?style=for-the-badge&logo=typescript&logoColor=white"/>
 </section>
