--- a/src/components/content/content.component.scss
+++ b/src/components/content/content.component.scss
@@ -5,9 +5,9 @@
     .recommendedMovies, .recommendedSeries{
         .movies, .series{
             display: grid;
+            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(180px, max-content));
             justify-content: center;
-            gap: 1rem;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
         }
         .movie, .serie{
             width: 180px;
@@ -19,7 +19,6 @@
         .recommendedMovies, .recommendedSeries{
             
             .movies, .series{
-                background-color: aqua;
             }
         }
     }
