--- a/src/pages/content-page/content-page.component.scss
+++ b/src/pages/content-page/content-page.component.scss
@@ -2,11 +2,6 @@ $backgroundColor:#0a0a0a;
 .container{
     background-color: $backgroundColor;
     height: 100vh;
-    a{
-        color: #fff;
-        margin: 0 0 0 8rem;
-        text-decoration: underline;
-    }
     .contentPage{
         background-color: $backgroundColor;
         color: #fff;
@@ -17,7 +12,6 @@ $backgroundColor:#0a0a0a;
 
         .contentInfo{
             max-width: 800px;
-            height: 450px;
             margin-left: 1rem;
             p{
                 margin: 0;
@@ -43,20 +37,6 @@ $backgroundColor:#0a0a0a;
         }
     }
 }
-/* @media (max-width:1100px) {
-    .container{
-        .contentPage{
-            flex-direction: column;
-            .contentInfo{
-                max-width: 300px;
-                .title{
-                    font-size: 2rem;
-                    text-align: center;
-                }
-            }
-        }
-    }
-} */
  @media (max-width:1100px) {
     .container{
         .contentPage{
@@ -75,9 +55,18 @@ $backgroundColor:#0a0a0a;
         .contentPage{
             .contentInfo{
                 max-width: 450px;
-                .ratings{
-                    .rating{
-                    }
+            }
+        }
+    }
+ }
+ @media (max-width:765px) {
+    .container{
+        .contentPage{
+            flex-direction: column;
+            .contentInfo{
+                text-align: start;
+                .title{
+                    text-align: center;
                 }
             }
         }
